<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.profile.ui.ProfileFragment">




        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvProfileDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_20sdp"
            app:strokeWidth="1dp"
            app:strokeColor="@color/red_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvHello"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hello"
                    android:textSize="@dimen/_14sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvHello" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/nice_to_meet_you_here_is_your_all_information_and_have_a_good_day"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold|italic"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvName" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvYourName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/your_name"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold|italic"
                    android:gravity="start"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvDetails" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvNameData"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/your_name"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold|italic"
                    android:gravity="start"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvYourName" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvYourLastName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/your_last_name"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold|italic"
                    android:gravity="start"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvNameData" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvLastNameData"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/your_last_name"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold|italic"
                    android:gravity="start"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvYourLastName" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvYourEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/your_email"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold|italic"
                    android:gravity="start"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvLastNameData" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvEmailData"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/your_email"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold|italic"
                    android:gravity="start"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvYourEmail" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvYourMobile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/your_mobile"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold|italic"
                    android:gravity="start"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvEmailData" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvMobileData"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/your_mobile"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold|italic"
                    android:gravity="start"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvYourMobile" />



            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>