<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.login.ui.LoginFragment">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sdp"
            android:textStyle="normal|bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/black"
            app:strokeWidth="@dimen/_1sdp">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tlEmailSignIn"
                    style="@style/CustomEditTextLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmailSignIn"
                        style="@style/CustomEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tlPasswordSignIn"
                    style="@style/CustomEditTextLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7sdp"
                    app:endIconMode="password_toggle"
                    app:layout_constraintEnd_toEndOf="@id/tlEmailSignIn"
                    app:layout_constraintStart_toStartOf="@id/tlEmailSignIn"
                    app:layout_constraintTop_toBottomOf="@id/tlEmailSignIn">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPasswordSignIn"
                        style="@style/CustomEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSignIn"
                    style="@style/CustomButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/login"
                    app:layout_constraintEnd_toEndOf="@id/tlEmailSignIn"
                    app:layout_constraintStart_toStartOf="@id/tlEmailSignIn"
                    app:layout_constraintTop_toBottomOf="@id/tlPasswordSignIn" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvSignUp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/sign_in_text_dont_account_forgot_password"
                    android:textColor="@color/black"
                    android:textStyle="normal|bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/tlEmailSignIn"
                    app:layout_constraintStart_toStartOf="@id/tlEmailSignIn"
                    app:layout_constraintTop_toBottomOf="@id/btnSignIn" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>